attached_assets/Pasted--i-No-changes-detected-rest-express-1-0-0-start-npm-run-db-migrate-NODE-ENV-production-n-1763583804736_1763583804737.txt
[i] No changes detected

> rest-express@1.0.0 start
> npm run db:migrate && NODE_ENV=production node dist/index.js


> rest-express@1.0.0 db:migrate
> drizzle-kit push --force

No config path provided, using default 'drizzle.config.ts'
Reading config file '/app/drizzle.config.ts'
Using 'pg' driver for database querying
[⣷] Pulling schema from database...
KG[⣯] Pulling schema from database...
KG[⣟] Pulling schema from database...
KG[✓] Pulling schema from database...
[i] No changes detected

> rest-express@1.0.0 start
> npm run db:migrate && NODE_ENV=production node dist/index.js


> rest-express@1.0.0 db:migrate
> drizzle-kit push --force

No config path provided, using default 'drizzle.config.ts'
Reading config file '/app/drizzle.config.ts'
Using 'pg' driver for database querying
[⣷] Pulling schema from database...
KG[⣯] Pulling schema from database...
KG[⣟] Pulling schema from database...
KG[✓] Pulling schema from database...
[i] No changes detected
Failed to parse FIREBASE_SERVICE_ACCOUNT_KEY: SyntaxError: Expected property name or '}' in JSON at position 4
    at JSON.parse (<anonymous>)
    at file:///app/dist/index.js:419:35
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
Firebase Admin initialization error: Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
node:internal/modules/run_main:123
    triggerUncaughtException(
    ^

Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.5
Failed to parse FIREBASE_SERVICE_ACCOUNT_KEY: SyntaxError: Expected property name or '}' in JSON at position 4
    at JSON.parse (<anonymous>)
    at file:///app/dist/index.js:419:35
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
Firebase Admin initialization error: Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
node:internal/modules/run_main:123
    triggerUncaughtException(
    ^

Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.5
Failed to parse FIREBASE_SERVICE_ACCOUNT_KEY: SyntaxError: Expected property name or '}' in JSON at position 4
    at JSON.parse (<anonymous>)
    at file:///app/dist/index.js:419:35
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
Firebase Admin initialization error: Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
node:internal/modules/run_main:123
    triggerUncaughtException(
    ^

Error: Invalid FIREBASE_SERVICE_ACCOUNT_KEY: must be valid JSON service account key
    at file:///app/dist/index.js:427:13
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.5